--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- font awesome -->
   <!-- <script src="js/all.js"></script> -->
-  <title>car dealership recording</title>
+  <title>design 4</title>
   <style>
   </style>
 </head>
